--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "format:check": "prettier . --check"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.5",
     "flowbite-react": "^0.12.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.71.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.13.0",
     "zod": "^4.3.6"
   },
